[gd_scene load_steps=3 format=3 uid="uid://d2gkwlyod87m6"]

[ext_resource type="Script" path="res://scenes/player_stat_display/weapon_display.gd" id="1_japdp"]
[ext_resource type="Texture2D" uid="uid://dly7bu61fqklf" path="res://assets/weapons/rare/weapon.png" id="1_ydikq"]

[node name="WeaponDisplay" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 150)
script = ExtResource("1_japdp")

[node name="WeaponImage" type="TextureRect" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
texture = ExtResource("1_ydikq")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="WeaponName" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Rare Weapon"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WeaponStats" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DamageLabel" type="Label" parent="VBoxContainer/WeaponStats"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Damage:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DamageText" type="Label" parent="VBoxContainer/WeaponStats"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "1"
horizontal_alignment = 1
vertical_alignment = 1
